feat: handling path transversal